base/monitoring/ingress.yaml
# base/monitoring/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-gandi-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["grafana.truxonline.com"]
      secretName: grafana-tls
  rules:
    - host: grafana.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-gandi-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["prometheus.truxonline.com"]
      secretName: prometheus-tls
  rules:
    - host: prometheus.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
